# GAMM-Overview-23

./: .gitignore  GAMM Overview 23.ipynb  README.md  cli.py  config.yaml  config2.yaml  gen_overwrites.py  itnet.py  pyproject.toml  requirements.txt  runs  slurm_job.sh  slurm_job2.sh  svd.ipynb  tiramisu.py  train.py  train2.py  train_all.py  unet.py
src/gamm23/: config.py  train.py  utils.py
src/gamm23/data/: __init__.py  generate_data.py
src/gamm23/data/clean/: test.pth  train.pth  val.pth
src/gamm23/data/noisy/: test.pth  train.pth  val.pth
src/gamm23/networks/: __init__.py  itnet.py  tiramisu.py
src/gamm23/operators/: __init__.py  generate_op.py  linear_op.py  matrix.pth  operators.py
train/itnet_noisy/: train_losses.pth  val_adv_losses.pth  val_losses.pth
train/tiramisu_noisy/: train_losses.pth  val_adv_losses.pth  val_losses.pth
train/unet_noisy/: train_losses.pth  val_adv_losses.pth  val_losses.pth
weights/itnet/: best.pth  final.pth
weights/tiramisu/: best.pth  final.pth
weights/unet/: best.pth  final.pth
